crates/parser/tests/ast/basic/invalid_identifier.txt
123abc
/************
Error: Failed to lex source, encountered invalid token
  |> ???:1:1
  |
1 | 123abc
  | ^^^^^^
